[package]
name = "subhook"
version = "0.1.0"
#rust-version = "1.75.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clokwerk = "0.4.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features=false }
rusqlite = "0.32.1"
serde = { version = "1.0.206", features = ["derive"]}
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
